test/should-fail/fetch2.js
fetch('https://archive.org/metadata/commute/collection')
